--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -417,15 +417,25 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                     vmcs_write64(); // 一堆写入vmcs, 使用vmwrite指令
                 vmx_vcpu_put();
                     vmx_vcpu_pi_put();
-                    vmx_prepare_switch_to_host();
+                    vmx_prepare_switch_to_host(); // 
                 put_cpu();
             kvm_vcpu_mtrr_init(vcpu); // 初始化mtrr链表 
             vcpu_load(vcpu);  // 加载vcpu信息<参数为kvm_vcpu>, struct vmx_vcpu(vcpu的一个运行环境)加载, 
                 kvm_arch_vcpu_load(vcpu, cpu)
                     kvm_x86_ops->vcpu_load(vcpu, cpu); // 实际调用vmx.c的 vmx_vcpu_load(), 见上面
             kvm_vcpu_reset(vcpu, false); // 
+                kvm_lapic_reset(vcpu, init_event);
+                vcpu(kvm_vcpu)的很多变量的初始化
+                kvm_clear_interrupt_queue(vcpu);
+                kvm_clear_exception_queue(vcpu);
+                kvm_make_request(KVM_REQ_EVENT, vcpu);
+                kvmclock_reset(vcpu);
+                kvm_x86_ops->vcpu_reset(vcpu, init_event);
             kvm_init_mmu(vcpu, false);
             vcpu_put(vcpu);
+                kvm_arch_vcpu_put(vcpu);
+                preempt_notifier_unregister(&vcpu->preempt_notifier);
+                __this_cpu_write(kvm_running_vcpu, NULL);
         kvm_create_vcpu_debugfs() //
         kvm_get_kvm() // 增加kvm的引用计数
         kvm_arch_vcpu_setup() // 设置VCPU结构
