--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -24,11 +24,14 @@
       - [6.3.1.3. vCPU检测](#6313-vcpu检测)
       - [6.3.1.4. 创建vcpu_fd](#6314-创建vcpu_fd)
       - [6.3.1.5. 释放内核锁和返回vcpu_fd](#6315-释放内核锁和返回vcpu_fd)
-- [7. KVM_SET_USER_MEMORY_REGION流程](#7-kvm_set_user_memory_region流程)
+- [7. vCPU的运行](#7-vcpu的运行)
   - [7.1. 基本原理](#71-基本原理)
   - [7.2. 基本流程](#72-基本流程)
   - [7.3. 代码分析](#73-代码分析)
-- [8. vCPU的运行](#8-vcpu的运行)
+- [8. KVM_SET_USER_MEMORY_REGION流程](#8-kvm_set_user_memory_region流程)
+  - [8.1. 基本原理](#81-基本原理)
+  - [8.2. 基本流程](#82-基本流程)
+  - [8.3. 代码分析](#83-代码分析)
 
 <!-- /code_chunk_output -->
 
@@ -436,11 +439,13 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                 kvm_arch_vcpu_put(vcpu);
                 preempt_notifier_unregister(&vcpu->preempt_notifier);
                 __this_cpu_write(kvm_running_vcpu, NULL);
-        kvm_create_vcpu_debugfs() //
+        kvm_create_vcpu_debugfs() // 创建vcpu的debugfs
         kvm_get_kvm() // 增加kvm的引用计数
         kvm_arch_vcpu_setup() // 设置VCPU结构
         create_vcpu_fd() // 为新创建的vcpu创建对应的fd，以便于后续通过该fd进行ioctl操作
         kvm_arch_vcpu_postcreate() // 架构相关的善后工作，比如再次调用vcpu_load，以及tsc相关处理
+            vcpu_load();
+            kvm_write_tsc();
 ```
 
 ## 6.3. 代码分析
@@ -698,38 +703,9 @@ static int init_kvm_mmu(struct kvm_vcpu *vcpu)
 
 返回**vcpu\_fd**
 
-# 7. KVM_SET_USER_MEMORY_REGION流程
+# 7. vCPU的运行
 
 ## 7.1. 基本原理
-
-如之前分析，kvm虚拟机实际运行于qemu-kvm的进程上下文中，因此，需要建立虚拟机的物理内存空间(GPA)与qemu-kvm进程的虚拟地址空间(HVA)的映射关系。
-
-虚拟机的**物理地址空间**实际也是**不连续**的，分成不同的内存区域(slot)，因为物理地址空间中通常还包括BIOS、MMIO、显存、ISA保留等部分。
-
-qemu-kvm通过ioctl vm指令KVM_SET_USER_MEMORY_REGION来为虚拟机设置内存。主要建立guest物理地址空间中的内存区域与qemu-kvm虚拟地址空间中的内存区域的映射，从而建立其从GVA到HVA的对应关系，该对应关系主要通过kvm_mem_slot结构体保存，所以实质为设置kvm_mem_slot结构体。
-
-本文简介ioctl vm指令KVM_SET_USER_MEMORY_REGION在内核中的执行流程，qemu-kvm用户态部分暂不包括。
-
-## 7.2. 基本流程
-
-ioctl vm指令KVM_SET_USER_MEMORY_REGION在内核主要执行流程如下：
-
-```
-kvm_vm_ioctl()
-    kvm_vm_ioctl_set_memory_region()
-        kvm_set_memory_region()
-            __kvm_set_memory_region()
-                kvm_iommu_unmap_pages() // 原来的slot需要删除，所以需要unmap掉相应的内存区域
-                install_new_memslots() //将new分配的memslot写入kvm->memslots[]数组中
-                kvm_free_physmem_slot() // 释放旧内存区域相应的物理内存(HPA)
-```
-
-## 7.3. 代码分析
-
-
-
-
-# 8. vCPU的运行
 
 在创建完**VM**和**vCPU**并且完成了**初始化工作**之后，就可以通过**调度程序调度执行**。因为在Linux中，KVM虚拟机作为一个**系统线程**运行，因此，KVM虚拟机的调度程序实际上也就是Linux的调度程序，具体的调度将在后文qemu部分进行讨论，在当前，**KVM的调用**是从ioctl的**KVM\_RUN指令**字开始的。
 
@@ -772,6 +748,8 @@ static long kvm_vcpu_ioctl(struct file *filp,
 
 由此可见，上下文切换次数过于频繁会带来不小的性能开销，因此，很有必要对这方面进行优化。和操作系统进行**进程切换的思路**一样，KVM使用**Lazy Save/Restore** 的方法进行优化。其基本思想是**尽量不要对寄存器进行恢复/保存操作**，直到必须要这么做的时候，才进行类似的操作。
 
+## 7.2. 基本流程
+
 **执行vCPU**的请求首先发送到**kvm\_vcpu\_ioctl函数**中，然后**加载vCPU参数**，调用**kvm\_arch\_vcpu\_ioctl\_run**函数进入**具体的vCPU运行**环节。(arch/x86/kvm/x86.c)
 
 ```
@@ -784,6 +762,8 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  |	|	├─kvm_x86_ops->handle_exit(vcpu)	// vmexit的处理
  ├─         								// 
 ```
+
+## 7.3. 代码分析
 
 1）通过调用**sigprocmask函数**，保证在**vCPU的初始化**过程中，不会因为来自**其他线程的信号干扰而中断**。
 
@@ -888,3 +868,35 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
 4）在5286～5289行中，如果对当前执行的vCPU需要调度，会引用Linux的进程调度子程序进行一次任务调度。
 
 在上面的执行流程中，最重要的执行在 **vcpu\_enter\_guest** 函数中，该函数实现了进入客户机并且执行具体指令的操作。
+
+# 8. KVM_SET_USER_MEMORY_REGION流程
+
+## 8.1. 基本原理
+
+如之前分析，kvm虚拟机实际运行于qemu-kvm的进程上下文中，因此，需要建立虚拟机的物理内存空间(GPA)与qemu-kvm进程的虚拟地址空间(HVA)的映射关系。
+
+虚拟机的**物理地址空间**实际也是**不连续**的，分成不同的内存区域(slot)，因为物理地址空间中通常还包括BIOS、MMIO、显存、ISA保留等部分。
+
+qemu-kvm通过ioctl vm指令KVM_SET_USER_MEMORY_REGION来为虚拟机设置内存。主要建立guest物理地址空间中的内存区域与qemu-kvm虚拟地址空间中的内存区域的映射，从而建立其从GVA到HVA的对应关系，该对应关系主要通过kvm_mem_slot结构体保存，所以实质为设置kvm_mem_slot结构体。
+
+本文简介ioctl vm指令KVM_SET_USER_MEMORY_REGION在内核中的执行流程，qemu-kvm用户态部分暂不包括。
+
+## 8.2. 基本流程
+
+ioctl vm指令KVM_SET_USER_MEMORY_REGION在内核主要执行流程如下：
+
+```
+kvm_vm_ioctl()
+    kvm_vm_ioctl_set_memory_region()
+        kvm_set_memory_region()
+            __kvm_set_memory_region()
+                kvm_iommu_unmap_pages() // 原来的slot需要删除，所以需要unmap掉相应的内存区域
+                install_new_memslots() //将new分配的memslot写入kvm->memslots[]数组中
+                kvm_free_physmem_slot() // 释放旧内存区域相应的物理内存(HPA)
+```
+
+## 8.3. 代码分析
+
+
+
+
