--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -398,7 +398,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                 vmx->vpid = allocate_vpid(); // 分配vpid
                 vmx->pml_pg = alloc_page(); // 
                 alloc_loaded_vmcs(&vmx->vmc01); // loaded_vmcs的分配以及初始化
-                    loaded_vmcs->vmcs = alloc_vmcs(); // 分配页面
+                    loaded_vmcs->vmcs = alloc_vmcs(); // 分配一个页面
                     loaded_vmcs_init(loaded_vmcs); // 初始化 loaded_vmcs
                         vmcs_clear(loaded_vmcs->vmcs); // 调用vmclear 
                     loaded_vmcs->msr_bitmap = (unsigned long *)__get_free_page(GFP_KERNEL_ACCOUNT); // msr_bitmap 分配页面
@@ -426,7 +426,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
             vcpu_load(vcpu);  // 加载vcpu信息<参数为kvm_vcpu>, struct vmx_vcpu(vcpu的一个运行环境)加载, 
                 kvm_arch_vcpu_load(vcpu, cpu)
                     kvm_x86_ops->vcpu_load(vcpu, cpu); // 实际调用vmx.c的 vmx_vcpu_load(), 见上面
-            kvm_vcpu_reset(vcpu, false); // 
+            kvm_vcpu_reset(vcpu, false); // 对vcpu结构进行初始化
                 kvm_lapic_reset(vcpu, init_event);
                 vcpu(kvm_vcpu)的很多变量的初始化
                 kvm_clear_interrupt_queue(vcpu);
@@ -441,7 +441,6 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                 __this_cpu_write(kvm_running_vcpu, NULL);
         kvm_create_vcpu_debugfs() // 创建vcpu的debugfs
         kvm_get_kvm() // 增加kvm的引用计数
-        kvm_arch_vcpu_setup() // 设置VCPU结构
         create_vcpu_fd() // 为新创建的vcpu创建对应的fd，以便于后续通过该fd进行ioctl操作
         kvm_arch_vcpu_postcreate() // 架构相关的善后工作，比如再次调用vcpu_load，以及tsc相关处理
             vcpu_load();
@@ -707,7 +706,9 @@ static int init_kvm_mmu(struct kvm_vcpu *vcpu)
 
 ## 7.1. 基本原理
 
-在创建完**VM**和**vCPU**并且完成了**初始化工作**之后，就可以通过**调度程序调度执行**。因为在Linux中，KVM虚拟机作为一个**系统线程**运行，因此，KVM虚拟机的调度程序实际上也就是Linux的调度程序，具体的调度将在后文qemu部分进行讨论，在当前，**KVM的调用**是从ioctl的**KVM\_RUN指令**字开始的。
+在创建完**VM**和**vCPU**并且完成了**初始化工作**之后，就可以通过**调度程序调度执行**。
+
+因为在Linux中，KVM虚拟机作为一个**系统线程**运行，因此，KVM虚拟机的调度程序实际上也就是Linux的调度程序，具体的调度将在后文qemu部分进行讨论，在当前，**KVM的调用**是从ioctl的**KVM\_RUN指令**字开始的。
 
 ```cpp
 // virt/kvm/kvm_main.c
