--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -644,8 +644,24 @@ struct loaded_vmcs {
 };
 ```
 
+而vmcs结构如下
 
+```cpp
+struct vmcs_hdr {
+        u32 revision_id:31;
+        u32 shadow_vmcs:1;
+};
+// vmcs具体结构分配由硬件实现, 程序员只需要通过 VMWRITE 和 VMREAD 指令去访问。
+struct vmcs {
+        struct vmcs_hdr hdr;
+        u32 abort;
+        char data[0];
+};
+// 每个逻辑cpu一个vmcs结构
+DECLARE_PER_CPU(struct vmcs *, current_vmcs);
+```
 
+![2020-02-23-23-04-07.png](./images/2020-02-23-23-04-07.png)
 
 
 `vcpu_vmx`其实是**VCPU**的**一个运行环境**，理解为environment。通过**loaded\_vmcs**和**cpu**成员将**vmcs**和**CPU**关联起来。
