--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/2. VMCS区域.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/2. VMCS区域.md
@@ -1,1 +1,3 @@
 VMCS结构存放在一个屋里地址区域里, 这个区域被称为"VMCS region". VMCS区域需要对齐在4K边界上. VMCS区域的大小由IA32\_VMX\_BASIC\[44:32]域里得到(见2.5.4节), 以KB为单位. 最高4KB. IA32\_VMX\_BASIC\[53:50]域报告了VMCS区域支持的cache类型, 支持UC与WB类型
+
+![2020-02-23-23-03-54.png](./images/2020-02-23-23-03-54.png)
