--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -743,7 +743,7 @@ static long kvm_vcpu_ioctl(struct file *filp,
 
 1）**KVM保存自己的上下文**。
 
-2）KVM通过使用将**kvm\_vcpu结构体**中的相关上下文加载到**物理CPU**中。
+2）KVM通过使用将**kvm\_vcpu结构体**中的**相关上下文**加载到**物理CPU**中。
 
 3）KVM执行**kvm\_x86\_ops**中的**run\_vcpu函数**，调用具体的平台相关指令，进入**虚拟机运行环境**中。
 
