--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -755,6 +755,7 @@ static long kvm_vcpu_ioctl(struct file *filp,
 
 ```
 kvm_arch_vcpu_ioctl_run()                	// vcpu运行
+ ├─vcpu_load(vcpu)                          // 
  ├─kvm_sigset_activate(vcpu)                // 
  ├─kvm_load_guset_fpu()         			//  
  ├─vcpu_run()            					// 死循环进入vcpu_enter_guest
