--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -403,7 +403,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                         vmcs_clear(loaded_vmcs->vmcs); // 调用vmclear 
                     loaded_vmcs->msr_bitmap = (unsigned long *)__get_free_page(GFP_KERNEL_ACCOUNT); // msr_bitmap 分配页面
                 vmx_disable_intercept_for_msr();
-                vmx_vcpu_load();
+                vmx_vcpu_load(); // 加载vcpu信息
                     vmx_vcpu_load_vmcs(); // 加载vmcs
                         already_loaded = vmx->loaded_vmcs->cpu == cpu; // 是否已经加载的判断
                             loaded_vmcs_clear(vmx->loaded_vmcs); // 没有加载时, 会调用vmclear命令(操作数为struct vmcs地址), 用于对该VMCS区域初始化, 包括将数据填充到VMCS区域和将VMCS状态(不可见字段)置为clear
@@ -755,9 +755,10 @@ static long kvm_vcpu_ioctl(struct file *filp,
 
 ```
 kvm_arch_vcpu_ioctl_run()                	// vcpu运行
- ├─vcpu_load(vcpu)                          // 
+ ├─vcpu_load(vcpu)                          // 加载vcpu信息, 见前面
  ├─kvm_sigset_activate(vcpu)                // 
  ├─kvm_load_guset_fpu()         			//  
+ |	├─kvm_save_current_fpu(vcpu->arch.user_fpu); // 准备
  ├─vcpu_run()            					// 死循环进入vcpu_enter_guest
  |	├─vcpu_enter_guest()                	// 准备guestos的运行上下文
  |	|	├─kvm_x86_ops->run(vcpu)  			// 这里会调用vmx_vcpu_run
