--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -760,9 +760,10 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  ├─kvm_load_guset_fpu()         			//  加载虚拟机的fpu
  |	├─kvm_save_current_fpu(vcpu->arch.user_fpu); // 将当前进程的fpu赋值给vcpu
  ├─vcpu_run()            					// 死循环进入vcpu_enter_guest
- |	├─vcpu_enter_guest()                	// 准备guestos的运行上下文
- |	|	├─kvm_x86_ops->run(vcpu)  			// 这里会调用vmx_vcpu_run
- |	|	├─kvm_x86_ops->handle_exit(vcpu)	// vmexit的处理
+ |	├─for(;;)                	// 准备guestos的运行上下文
+ |	|   ├─vcpu_enter_guest()                	// 物理CPU进入guest状态
+ |	|	|   ├─kvm_x86_ops->run(vcpu)  			// 这里会调用vmx_vcpu_run
+ |	|	|   ├─kvm_x86_ops->handle_exit(vcpu)	// vmexit的处理
  ├─         								// 
 ```
 
@@ -864,7 +865,7 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
 
 1）在5232～5240行中，将**虚拟APIC**和**vCPU**的状态**重置**。这个操作通过调用kvm\_lapic\_reset和kvm\_arch\_vcpu\_reset函数实现。
 
-2）在5245～5270行中，正常情况下，将kvm\_vcp\-\>arch.mp\_state的取值作为**单机未运行的取值**：KVM\_MP\_STATE\_RUNNABLE；如果 vCPU 在 VM 中处于其他状态，则会出错。在运行中有一个**循环**，直到确认了**vcpu\_enter\_guest**函数执行完毕，即物理CPU进入了GUEST状态并且执行完成后，才会执行下一步操作。
+2）在5245～5270行中，正常情况下，将kvm\_vcp\-\>arch.mp\_state的取值作为**单机未运行的取值**：KVM\_MP\_STATE\_RUNNABLE；如果 vCPU 在 VM 中处于其他状态，则会出错。在运行中有一个**循环**，直到确认了**vcpu\_enter\_guest**函数执行完毕，即**物理CPU进入了GUEST状态**并且执行完成后，才会执行下一步操作。
 
 3）在5273～5278行中，将检查本次执行的一些结果。如果CPU当前有挂起的定时器或者其他中断，则会保存该中断的现场。
 
