--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -787,77 +787,77 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
 
 ```cpp
 // arch/x86/kvm/x86.c
-(5232)   static int __vcpu_run(struct kvm_vcpu *vcpu)￼
-(5233)   {￼
-(5234)        int r;￼
-(5235)        struct kvm *kvm = vcpu->kvm;￼
-(5236)￼
-(5237)        if (unlikely(vcpu->arch.mp_state == KVM_MP_STATE_SIPI_RECEIVED)) {￼
-(5238)             pr_debug("vcpu %d received sipi with vector # %x\n",￼
-(5239)                   vcpu->vcpu_id, vcpu->arch.sipi_vector);￼
-(5240)             kvm_lapic_reset(vcpu);￼
-(5241)             r = kvm_arch_vcpu_reset(vcpu);￼
-(5242)             if (r)￼
-(5243)                  return r;￼
-(5244)             vcpu->arch.mp_state = KVM_MP_STATE_RUNNABLE;￼
-(5245)        }￼
-(5246)￼
-(5247)        vcpu->srcu_idx = srcu_read_lock(&kvm->srcu);￼
-(5248)        vapic_enter(vcpu);￼
-(5249)￼
-(5250)        r = 1;￼
-(5251)        while (r > 0) {￼
-(5252)             if (vcpu->arch.mp_state == KVM_MP_STATE_RUNNABLE)￼
-(5253)                  r = vcpu_enter_guest(vcpu);￼
-(5254)             else {￼
-(5255)                  srcu_read_unlock(&kvm->srcu, vcpu->srcu_idx);￼
-(5256)                  kvm_vcpu_block(vcpu);￼
-(5257)                  vcpu->srcu_idx = srcu_read_lock(&kvm->srcu);￼
-(5258)                  if (kvm_check_request(KVM_REQ_UNHALT, vcpu))￼
-(5259)                  {￼
-(5260)                       switch(vcpu->arch.mp_state) {￼
-(5261)                       case KVM_MP_STATE_HALTED:￼
-(5262)                            vcpu->arch.mp_state =￼
-(5263)                                KVM_MP_STATE_RUNNABLE;￼
-(5264)                       case KVM_MP_STATE_RUNNABLE:￼
-(5265)                            break;￼
-(5266)                       case KVM_MP_STATE_SIPI_RECEIVED:￼
-(5267)                       default:￼
-(5268)                            r = -EINTR;￼
-(5269)                            break;￼
-(5270)                       }￼
-(5271)                  }￼
-(5272)             }￼
-(5273)￼
-(5274)             if (r <= 0)￼
-(5275)                  break;￼
-(5276)￼
-(5277)             clear_bit(KVM_REQ_PENDING_TIMER, &vcpu->requests);￼
-(5278)             if (kvm_cpu_has_pending_timer(vcpu))￼
-(5279)                  kvm_inject_pending_timer_irqs(vcpu);￼
-(5280)￼
-(5281)             if (dm_request_for_irq_injection(vcpu)) {￼
-(5282)                  r = -EINTR;￼
-(5283)                  vcpu->run->exit_reason = KVM_EXIT_INTR;￼
-(5284)                  ++vcpu->stat.request_irq_exits;￼
-(5285)             }￼
-(5286)             if (signal_pending(current)) {￼
-(5287)                  r = -EINTR;￼
-(5288)                  vcpu->run->exit_reason = KVM_EXIT_INTR;￼
-(5289)                  ++vcpu->stat.signal_exits;￼
-(5290)             }￼
-(5291)             if (need_resched()) {￼
-(5292)                  srcu_read_unlock(&kvm->srcu, vcpu->srcu_idx);￼
-(5293)                  kvm_resched(vcpu);￼
-(5294)                  vcpu->srcu_idx = srcu_read_lock(&kvm->srcu);￼
-(5295)             }￼
-(5296)        }￼
-(5297)￼
-(5298)        srcu_read_unlock(&kvm->srcu, vcpu->srcu_idx);￼
-(5299)￼
-(5300)        vapic_exit(vcpu);￼
-(5301)￼
-(5302)        return r;￼
+(5232)   static int __vcpu_run(struct kvm_vcpu *vcpu)
+(5233)   {
+(5234)        int r;
+(5235)        struct kvm *kvm = vcpu->kvm;
+(5236)
+(5237)        if (unlikely(vcpu->arch.mp_state == KVM_MP_STATE_SIPI_RECEIVED)) {
+(5238)             pr_debug("vcpu %d received sipi with vector # %x\n",
+(5239)                   vcpu->vcpu_id, vcpu->arch.sipi_vector);
+(5240)             kvm_lapic_reset(vcpu);
+(5241)             r = kvm_arch_vcpu_reset(vcpu);
+(5242)             if (r)
+(5243)                  return r;
+(5244)             vcpu->arch.mp_state = KVM_MP_STATE_RUNNABLE;
+(5245)        }
+(5246)
+(5247)        vcpu->srcu_idx = srcu_read_lock(&kvm->srcu);
+(5248)        vapic_enter(vcpu);
+(5249)
+(5250)        r = 1;
+(5251)        while (r > 0) {
+(5252)             if (vcpu->arch.mp_state == KVM_MP_STATE_RUNNABLE)
+(5253)                  r = vcpu_enter_guest(vcpu);
+(5254)             else {
+(5255)                  srcu_read_unlock(&kvm->srcu, vcpu->srcu_idx);
+(5256)                  kvm_vcpu_block(vcpu);
+(5257)                  vcpu->srcu_idx = srcu_read_lock(&kvm->srcu);
+(5258)                  if (kvm_check_request(KVM_REQ_UNHALT, vcpu))
+(5259)                  {
+(5260)                       switch(vcpu->arch.mp_state) {
+(5261)                       case KVM_MP_STATE_HALTED:
+(5262)                            vcpu->arch.mp_state =
+(5263)                                KVM_MP_STATE_RUNNABLE;
+(5264)                       case KVM_MP_STATE_RUNNABLE:
+(5265)                            break;
+(5266)                       case KVM_MP_STATE_SIPI_RECEIVED:
+(5267)                       default:
+(5268)                            r = -EINTR;
+(5269)                            break;
+(5270)                       }
+(5271)                  }
+(5272)             }
+(5273)
+(5274)             if (r <= 0)
+(5275)                  break;
+(5276)
+(5277)             clear_bit(KVM_REQ_PENDING_TIMER, &vcpu->requests);
+(5278)             if (kvm_cpu_has_pending_timer(vcpu))
+(5279)                  kvm_inject_pending_timer_irqs(vcpu);
+(5280)
+(5281)             if (dm_request_for_irq_injection(vcpu)) {
+(5282)                  r = -EINTR;
+(5283)                  vcpu->run->exit_reason = KVM_EXIT_INTR;
+(5284)                  ++vcpu->stat.request_irq_exits;
+(5285)             }
+(5286)             if (signal_pending(current)) {
+(5287)                  r = -EINTR;
+(5288)                  vcpu->run->exit_reason = KVM_EXIT_INTR;
+(5289)                  ++vcpu->stat.signal_exits;
+(5290)             }
+(5291)             if (need_resched()) {
+(5292)                  srcu_read_unlock(&kvm->srcu, vcpu->srcu_idx);
+(5293)                  kvm_resched(vcpu);
+(5294)                  vcpu->srcu_idx = srcu_read_lock(&kvm->srcu);
+(5295)             }
+(5296)        }
+(5297)
+(5298)        srcu_read_unlock(&kvm->srcu, vcpu->srcu_idx);
+(5299)
+(5300)        vapic_exit(vcpu);
+(5301)
+(5302)        return r;
 (5303)   }
 ```
 
