--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -764,6 +764,7 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  |	|   ├─vcpu_enter_guest()                	// 物理CPU进入guest状态
  |	|	|   ├─kvm_check_requests()  			// 处理 vcpu->requests, 每个有相应处理
  |	|	|   ├─kvm_mmu_reload(vcpu);  			// 加载mmu
+ |	|	|   ├─kvm_x86_ops->prepare_guest_switch(vcpu);  			// 准备陷入到guest, 保存host当前状态
  |	|	|   ├─kvm_x86_ops->run(vcpu)  			// 这里会调用vmx_vcpu_run
  |	|	|   ├─kvm_x86_ops->handle_exit(vcpu)	// vmexit的处理
  ├─         								// 
