--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -767,8 +767,8 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  |	|	|   ├─kvm_x86_ops->prepare_guest_switch(vcpu); // 准备陷入到guest, 保存host当前状态
  |	|	|   ├─local_irq_disable();  			// 屏蔽中断响应，准备进入guest
  |	|	|   ├─vcpu->mode = IN_GUEST_MODE;  			// 将vcpu模式设为guest模式
- |	|	|   ├─guest_enter_irqoff();  			// 将vcpu模式设为guest模式
- |	|	|   ├─kvm_x86_ops->run(vcpu)  			// 这里会调用vmx_vcpu_run
+ |	|	|   ├─guest_enter_irqoff();  			// 计算虚拟机系统时间和上下文切换
+ |	|	|   ├─kvm_x86_ops->run(vcpu)  			// 开始运行guest, 会调用vmx_vcpu_run
  |	|	|   ├─kvm_x86_ops->handle_exit(vcpu)	// vmexit的处理
  ├─         								// 
 ```
