--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX指令.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX指令.md
@@ -80,6 +80,8 @@ VMPTRLD 指令从**内存**中加载一个**64位物理地址**作为 `current-V
 
 ## 7.3. VMLAUNCH 指令
 
+VMLAUNCH 指令使用于第一次发起 VM
+
 ## 7.4. VMRESUME 指令
 
 ## 7.5. 返回到 executive monitor
