--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX指令.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX指令.md
@@ -80,7 +80,13 @@ VMPTRLD 指令从**内存**中加载一个**64位物理地址**作为 `current-V
 
 ## 7.3. VMLAUNCH 指令
 
-VMLAUNCH 指令使用于第一次发起 VM
+`VMLAUNCH` 指令使用于第一次发起 `VM-entry` 操作. 因此 `current-VMCS` 的状态必须为 "`clear`" , 否则产生 `VMfailValid` 类型失败. 
+
+在发起 `VM entry` **操作前**的一系列动作里, 需要使用 `VMCLEAR` **指令**将**目标 VMCS** 状态置为 "`clear`" 状态, 然后使用 `VMPTRLD` **指令**加载**该 VMCS** 为 `current-VMCS`.
+
+VM entry 操作是一个复杂的过程, 分为**三个阶段**进行, 每个阶段会进行一些必要的检查. 检查不通过时, 这三个阶段的后续处理也不同, 如下.
+
+
 
 ## 7.4. VMRESUME 指令
 
