--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX指令.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX指令.md
@@ -86,7 +86,20 @@ VMPTRLD 指令从**内存**中加载一个**64位物理地址**作为 `current-V
 
 VM entry 操作是一个复杂的过程, 分为**三个阶段**进行, 每个阶段会进行一些必要的检查. 检查不通过时, 这三个阶段的后续处理也不同, 如下.
 
+(1) 执行基本检查
 
+包括:
+
+- 可能产生的指令异常(`#UD`或`#GP`异常)
+- `current-VMCS pointer`是否有效
+- 当前VMCS状态是否为 "clear"
+- 执行的 VMLAUNCH 指令是否被 "MOV-SS" 指令阻塞.
+
+(2) 对 VMCS 内的 VM-execution、VM-exit、VM-entry以及 host-state 区域的各个字段进行检查.
+
+(3) 对 VMCS 的 guest-state 区域的各个字段进行检查.
+
+在第 1 步里的检查失败后将执行 VMLAUNCH 指令的下一条指令. 当 current-VMCS pointer 无效(如 FFFFFFF_FFFFFFFFh )时产生
 
 ## 7.4. VMRESUME 指令
 
