--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX指令.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX指令.md
@@ -99,7 +99,9 @@ VM entry 操作是一个复杂的过程, 分为**三个阶段**进行, 每个阶
 
 (3) 对 VMCS 的 guest-state 区域的各个字段进行检查.
 
-在第 1 步里的检查失败后将执行 VMLAUNCH 指令的下一条指令. 当 current-VMCS pointer 无效(如 FFFFFFF_FFFFFFFFh )时产生
+在**第 1 步**里的**检查失败**后将执行 VMLAUNCH 指令的**下一条指令**. 当 `current-VMCS pointer` 无效(如 `FFFFFFF_FFFFFFFFh` )时产生 `VMfailInvalid` 失败. 当 `current-VMCS` 为非 "clear" 或执行的 VMLAUNCH 指令被 "`MOV-SS`" 指令阻塞时, 产生 VMfailValid 失败. **产生异常**时转入**执行异常处理例程**.
+
+
 
 ## 7.4. VMRESUME 指令
 
