--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX指令.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX指令.md
@@ -101,6 +101,11 @@ VM entry 操作是一个复杂的过程, 分为**三个阶段**进行, 每个阶
 
 在**第 1 步**里的**检查失败**后将执行 VMLAUNCH 指令的**下一条指令**. 当 `current-VMCS pointer` 无效(如 `FFFFFFF_FFFFFFFFh` )时产生 `VMfailInvalid` 失败. 当 `current-VMCS` 为非 "clear" 或执行的 VMLAUNCH 指令被 "`MOV-SS`" 指令阻塞时, 产生 VMfailValid 失败. **产生异常**时转入**执行异常处理例程**.
 
+这一步里, 有一个需要关注的 "blocking by MOV-SS" 阻塞状态, 在下面的情形里:
+
+```
+mov 
+```
 
 
 ## 7.4. VMRESUME 指令
