--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX指令.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX指令.md
@@ -104,8 +104,13 @@ VM entry 操作是一个复杂的过程, 分为**三个阶段**进行, 每个阶
 这一步里, 有一个需要关注的 "blocking by MOV-SS" 阻塞状态, 在下面的情形里:
 
 ```
-mov 
+mov ss, ax    ; 更新 ss 寄存器, 或执行 pop ss 指令
+vmlaunch      ; vmlaunch 有 "blocking by MOV-SS" 阻塞状态
 ```
+
+上面情况, 当 VMLAUNCH 或 VMRESUME 指令执行在 MOV-SS 或 POP-SS 指令后, 那么就会产生 VMfailValid 失败, 产生的指令错误号为 26, 指示 "VMLAUNCH 或 VMRESUME 指令将被 MOV-SS 阻塞".
+
+在第 2 步
 
 
 ## 7.4. VMRESUME 指令
