--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX指令.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX指令.md
@@ -54,7 +54,9 @@ VMXON是唯一在VMX operation模式外可执行的指令. VMXON指令在root内
 
 # 4. VMfailValid事件原因
 
-VMX 指令产生的 VMfailValid 失败会对应一个编号, 这个编号就记录在 VM-instruction error 字段里. 这个
+VMX 指令产生的 VMfailValid 失败会对应一个编号, 这个编号就记录在 VM-instruction error 字段里. 这个字段是 VM-exit 信息区域内的其中一个 32 位字段. 如表所示.
+
+
 
 # 5. 指令异常优先级
 
