--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX指令.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/6. VMX指令.md
@@ -56,9 +56,17 @@ VMXON是唯一在VMX operation模式外可执行的指令. VMXON指令在root内
 
 VMX 指令产生的 VMfailValid 失败会对应一个编号, 这个编号就记录在 VM-instruction error 字段里. 这个字段是 VM-exit 信息区域内的其中一个 32 位字段. 如表所示.
 
+![2020-02-24-14-32-03.png](./images/2020-02-24-14-32-03.png)
 
+![2020-02-24-14-32-15.png](./images/2020-02-24-14-32-15.png)
+
+表列出了所有可能发生的 VMfailValid 原因, 编号 14、21以及27没有使用。其中有数个失败产生于 VM-entry 和 SMM 双重监控处理机制下的切入 SMM-transfer monitor 时.
 
 # 5. 指令异常优先级
+
+如前面, 如果VMX指令非正常执行, 会出现下面三种情况之一.
+
+(1) 产生异常, 可能产生的异常为: `#UD`, 
 
 # 6. VMCS 管理指令
 
