--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -760,7 +760,7 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  ├─kvm_load_guset_fpu()         			//  加载虚拟机的fpu
  |	├─kvm_save_current_fpu(vcpu->arch.user_fpu); // 将当前进程的fpu赋值给vcpu
  ├─vcpu_run()            					// 死循环进入vcpu_enter_guest
- |	├─for(;;)                	            // 确保 vcpu_enter_guest 完成
+ |	├─for(;;)                	            // 
  |	|   ├─vcpu_enter_guest()                	// 物理CPU进入guest状态
  |	|	|   ├─kvm_check_requests()  			// 处理 vcpu->requests, 每个有相应处理
  |	|	|   ├─kvm_mmu_reload(vcpu);  			// 加载mmu
@@ -769,7 +769,7 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  |	|	|   ├─vcpu->mode = IN_GUEST_MODE;  			// 将vcpu模式设为guest模式
  |	|	|   ├─guest_enter_irqoff();  			// 计算虚拟机系统时间和上下文切换
  |	|	|   ├─kvm_x86_ops->run(vcpu)  			// 开始运行guest, 会调用vmx_vcpu_run
- |	|	|   |   ├─__vmx_vcpu_run()  			// 调用汇编代码, 
+ |	|	|   |   ├─__vmx_vcpu_run()  			// 调用汇编代码, vmlaunch
  |	|	|   ├─kvm_x86_ops->handle_exit(vcpu)	// vmexit的处理
  ├─         								// 
 ```
