--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -773,7 +773,8 @@ kvm_arch_vcpu_ioctl_run()                	// vcpu运行
  |	|	|   |   ├─vmx_recover_nmi_blocking(vmx); // 恢复系统NMI中断
  |	|	|   |   ├─vmx_complete_interrupts(vmx); // 恢复中断
  |	|	|   ├─hw_breakpoint_restore()	// 恢复硬件断点
- |	|	|   ├─kvm_x86_ops->handle_exit(vcpu)	// vmexit的处理
+ |	|	|   ├─vcpu->mode = OUTSIDE_GUEST_MODE;	// vcpu mode
+ |	|	|   ├─kvm_x86_ops->handle_exit(vcpu)	// vmexit的处理, 由vmx_handle_exit实现, 主要设置vcpu->run->exit_reason，让外部感知退出原因，并对应处理。
  ├─         								// 
 ```
 
