--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/1. 内存虚拟化及其实现.md
+++ b/Virtualization/KVM/4. 内存虚拟化/1. 内存虚拟化及其实现.md
@@ -3,19 +3,19 @@
 
 <!-- code_chunk_output -->
 
-- [1 概述](#1-概述)
-- [2 客户机物理地址空间](#2-客户机物理地址空间)
-- [3 影子页表](#3-影子页表)
+- [概述](#概述)
+- [客户机物理地址空间](#客户机物理地址空间)
+- [影子页表](#影子页表)
   - [3.1 影子页表异常处理机制](#31-影子页表异常处理机制)
 - [4 EPT页表](#4-ept页表)
 
 <!-- /code_chunk_output -->
 
-# 1 概述
+# 概述
 
 实现 KVM 虚拟化，使客户机高效地、安全地使用宿主机的内存资源，就必须实现内存的虚拟化。
 
-# 2 客户机物理地址空间
+# 客户机物理地址空间
 
 为了实现内存虚拟化，让**客户机**使用一个**隔离的**、**从零开始**且具有**连续的内存空间**，KVM 引入一层**新的地址空间**，即**客户机物理地址空间 (Guest Physical Address, GPA**)，这个地址空间并**不是真正的物理地址空间**，它只是**宿主机虚拟地址空间**在**客户机地址空间**的一个映射。对**客户机**来说，**客户机物理地址空间**都是**从零开始的连续地址空间**，但对于**宿主机**来说，**客户机的物理地址空间**并**不一定是连续的**，客户机物理地址空间有可能映射在若干个不连续的宿主机地址区间，如下图 1 所示：
 
@@ -35,7 +35,7 @@
 
 其二是基于**硬件对虚拟化**的支持，来实现两者之间的转换。下面就详细阐述两种方法在 KVM 上的具体实现。
 
-# 3 影子页表
+# 影子页表
 
 由于**宿主机MMU不能直接装载客户机的页表！！！**来进行**内存访问**，所以当**客户机**访问**宿主机物理内存**时，需要经过**多次地址转换**。
 
