--- a/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/3. 内存虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/3. 内存虚拟化.md
@@ -12,10 +12,10 @@
     - [2.2.3. 操作系统对内存的认知小结](#223-操作系统对内存的认知小结)
 - [3. 虚拟化](#3-虚拟化)
   - [3.1. 内存虚拟化的目的](#31-内存虚拟化的目的)
-  - [3.2. 内存虚拟化面临的问题和解决办法](#32-内存虚拟化面临的问题和解决办法)
+  - [3.2. 内存虚拟化面临的问题](#32-内存虚拟化面临的问题)
   - [3.3. 内存虚拟化实现](#33-内存虚拟化实现)
-    - [内存虚拟化主要工作](#内存虚拟化主要工作)
-    - [系统的安全隔离](#系统的安全隔离)
+    - [3.3.1. 内存虚拟化主要工作](#331-内存虚拟化主要工作)
+    - [3.3.2. 系统的安全隔离](#332-系统的安全隔离)
 
 <!-- /code_chunk_output -->
 
@@ -104,7 +104,7 @@
 * 提供给**虚拟机**一个**从零地址开始的连续物理内存空间**.
 * 在各虚拟机之间有效隔离、调度和共享内存资源.
 
-## 3.2. 内存虚拟化面临的问题和解决办法
+## 3.2. 内存虚拟化面临的问题
 
 因此， **内存虚拟化**面临的问题是: 
 
@@ -112,9 +112,9 @@
 
 * 由于使用**内存分区方式！！！**, 把**物理内存**分给**多个客户机操作系统使用**, 客户机操作系统的**内存连续性要求！！！** 虽然能得到解决, 但内存的使用效率非常不灵活. 
 
-在面临这些问题的情况下，内存虚拟化的核心, 在于引入了一层新的地址空间 --- **客户机物理地址空间**.
-
 ## 3.3. 内存虚拟化实现
+
+在面临这些问题的情况下，内存虚拟化的核心, 在于引入了一层新的地址空间 --- **客户机物理地址空间**.
 
 图3\-5中, **VMM！！！** 负责**管理和分配**每个**虚拟机的物理内存！！！**, **客户机OS！！！** 看到的是一个虚构的**客户机物理地址空间！！！**, 其**指令目标地址！！！** 也是一个**客户机物理地址！！！**. 
 
@@ -124,7 +124,7 @@
 
 值得一提的是, 为**更有效利用空闲的物理内存**, 尤其是系统长期运行后产生的碎片, VMM通常会以比较小的粒度(如4KB)进行分配, 这就会造成了给定一个虚拟机的物理内存实际上是不连续的问题, 其具体位置完全取决于VMM的内存分配算法.
 
-### 内存虚拟化主要工作
+### 3.3.1. 内存虚拟化主要工作
 
 由于引入了**客户机物理地址空间**, **内存虚拟化**就主要处理以下两个方面的问题.
 
@@ -138,7 +138,7 @@
 
 一个最简单的办法, 设法让虚拟机对客户机物理地址空间的每一次访问都触发异常, 然后由VMM来查询地址转换表模拟其访问. 这种方法完备性和正确性没问题, 但性能是最差的, 其它方法见后续.
 
-### 系统的安全隔离
+### 3.3.2. 系统的安全隔离
 
 内存虚拟化还实现了**整个系统**的**安全隔离**, 包括**虚拟机之间**, **虚拟机与VMM之间**.
 
