--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/5. 内存虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/5. 内存虚拟化.md
@@ -36,7 +36,7 @@
 
 - **GVA→GPA**的转换是由**客户机软件决定**, 通常是**客户机OS**通过**VMCS中客户机状态域CR3**指向的**页表**来指定; 
 
-- **GPA→HPA**的转换是由**VMM决定**, VMM在将**物理内存分配给客户机时**就确定了**GPA→HPA**的转换, VMM通常会用内部数据结构来记录这个关系. VMM 为每个虚拟机动态地维护了一张客户机物理地址与宿主机物理地址映射表。
+- **GPA→HPA**的转换是由**VMM决定**, VMM在将**物理内存分配给客户机时**就确定了**GPA→HPA**的转换, VMM通常会用**内部数据结构**来记录这个关系. VMM 为**每个虚拟机**动态地维护了一张**客户机物理地址**与**宿主机物理地址**映射表。
 
 ## 1.1. 影子页表
 
