--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/5. 内存虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/5. 内存虚拟化.md
@@ -6,6 +6,8 @@
 - [1. 概述](#1-概述)
   - [1.1. 影子页表](#11-影子页表)
   - [1.2. VT-x支持](#12-vt-x支持)
+    - [1.2.1. EPT](#121-ept)
+    - [1.2.2. VPID](#122-vpid)
 - [2. Intel EPT](#2-intel-ept)
   - [2.1. EPT原理](#21-ept原理)
     - [2.1.1. 地址转换过程](#211-地址转换过程)
@@ -59,7 +61,11 @@
 
 ## 1.2. VT-x支持
 
+### 1.2.1. EPT
+
 为解决这个问题, VT\-x提供了**Extend Page Table(EPT**)技术, 直接在**硬件支持GVA→GPA→HPA的两次地址转换**, 降低内存虚拟化的难度, 提高内存虚拟化性能.
+
+### 1.2.2. VPID
 
 此外, 为进一步**提高TLB的使用效率**, VT\-x还引入了**Virtual Processor ID(VPID**)功能, 进一步增强内存虚拟化性能.
 
