--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/0. 概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/0. 概述.md
@@ -1,5 +1,14 @@
 
-# GPA和HPA
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. GPA和HPA](#1-gpa和hpa)
+- [2. 地址空间与地址](#2-地址空间与地址)
+
+<!-- /code_chunk_output -->
+
+# 1. GPA和HPA
 
 虚拟化平台下, 每个VM有自己的独立物理地址空间. VM本身不知道其他VM的存在, 只认为自己独占**0**到**MAXPHYADDR**范围的物理地址空间. 这个与OS下进程独占地址空间类似. 
 
@@ -7,9 +16,9 @@
 
 **VM私有的物理地址**空间被称为**GPA**(`Guest-Physical Address`)空间, 而**真实物理地址空间**被称为**HPA**(`Host-Physical Address`)空间.
 
-# 地址空间与地址
+# 2. 地址空间与地址
 
-对一个VM或OS下进程可访问的范围应描述为"空间". 而"地址"只是这个空间的一个位置. **物理地址空间**里可**映射到不同的存储设备**, 比如RAM(DRAM), ROM, Video buffer, PCI设备, PCIe设备等.
+对一个VM或OS下进程可访问的**范围**应描述为"**空间**". 而"**地址**"只是这个空间的一个位置. **物理地址空间**里可**映射到不同的存储设备**, 比如RAM(DRAM), ROM, Video buffer, PCI设备, PCIe设备等.
 
 在x86/x64平台, **最大物理地址空间**从0到MAXPHYADDR之间. 这个**MAXPHYADDR**可以使用`CPUID.80000008H:EAX[7:0]`查到. 
 
