--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -3,23 +3,25 @@
 
 <!-- code_chunk_output -->
 
-* [0 基本原理](#0-基本原理)
-* [1 EPT机制概述](#1-ept机制概述)
-	* [1.1 guest分页机制与EPT](#11-guest分页机制与ept)
-		* [1.1.1 guest的分页模式](#111-guest的分页模式)
-		* [1.1.2 引发GPA转换HPA](#112-引发gpa转换hpa)
-		* [1.1.3 guest分页机制下GPA的转换](#113-guest分页机制下gpa的转换)
-* [2 EPT页表结构](#2-ept页表结构)
+- [基本原理](#基本原理)
+- [EPT机制概述](#ept机制概述)
+  - [1.1 guest分页机制与EPT](#11-guest分页机制与ept)
+    - [1.1.1 guest的分页模式](#111-guest的分页模式)
+    - [1.1.2 引发GPA转换HPA](#112-引发gpa转换hpa)
+    - [1.1.3 guest分页机制下GPA的转换](#113-guest分页机制下gpa的转换)
+- [2 EPT页表结构](#2-ept页表结构)
 
 <!-- /code_chunk_output -->
 
-# 0 基本原理
+# 基本原理
 
 VMX架构引入了**EPT(Extended Page Table, 扩展页表**)机制来实现**VM物理地址空间的隔离**, EPT机制实现原理与x86/x64的**分页机制是一致**的.
 
-当**guest软件发出指令访问内存**时, **guest**最终生成**GPA(Guest\-Physical Address**). **EPT页表结构定义在host端(！！！**), **处理器**接受到**guest传来**的**guest\-physical address**后, 通过**EPT页表**结构转换为**HPA(host\-physical address**), 从而访问平台上的物理地址.
+当**guest软件发出指令访问内存**时, **guest**最终生成**GPA**(`Guest-Physical Address`). 
 
-# 1 EPT机制概述
+**EPT页表结构定义在host端(！！！**), **处理器**接受到**guest传来**的`guest-physical address`后, 通过**EPT页表**结构转换为**HPA**(`Host-physical address`), 从而访问平台上的物理地址.
+
+# EPT机制概述
 
 VMM在设置前应查询处理器是否支持EPT机制, 通过检查secondary processor\-based VM\-execution control字段的"enable EPT"位(bit 1)是否允许被置为1(见2.5.6.3). 当允许为1, 表明支持EPT机制, 否则不支持.
 
