--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
@@ -1,4 +1,18 @@
 
-# 
+# 功能检测的必要性
 
-VMX架构中的很多功能在不同
+VMX架构中的很多功能在不同处理器架构有不同的支持, 比如之前提的 `VMX-preemption timer` 功能. 
+
+因此, VMM 需要检测当前VMX架构下的功能, 并进行相应设置.
+
+注: 本书主要参照`Intel开发者手册` 2012年8月版, order number为: `325462-044US`.
+
+# 检测是否支持VMX
+
+使用 `CPUID.01H:ECX.VMX[5]`位来进行检测(详细见2.2.3)
+
+# 通过MSR组检查VMX能力
+
+VMX 架构提供了众多项目能力的检测, 包括: VMX的基本信息、杂项信息、VPID与EPT能力, 还有对VMCS内的control fields(控制字段)允许设置的位. 控制字段的位允许被置为1时, 代表着处理器拥有这个能力.
+
+比如, secondary processor-based control字段的bit 7是
