--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
@@ -15,4 +15,9 @@ VMX架构中的很多功能在不同处理器架构有不同的支持, 比如之
 
 VMX 架构提供了众多项目能力的检测, 包括: VMX的基本信息、杂项信息、VPID与EPT能力, 还有对VMCS内的control fields(控制字段)允许设置的位. 控制字段的位允许被置为1时, 代表着处理器拥有这个能力.
 
-比如, secondary processor-based control字段的bit 7是
+比如, secondary processor-based control字段的bit 7是"Unrestricted guest"位, 当它允许被置为1时, 表明处理器支持 unrestricted guest(不受限制的guest端)功能. 反之, 则表明处理器不支持该功能.
+
+VMX 的这些能力的检测提供在几组共 **14** 个 **MSR**(Model Specific Register)里, 如表2-1, 除了这些, 还有 4 个扩展的 TRUE 系列寄存器, 详见2.5.4节和2.5.5节
+
+![2020-02-24-22-19-23.png](./images/2020-02-24-22-19-23.png)
+
