--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
@@ -7,9 +7,9 @@ VMX架构中的很多功能在不同处理器架构有不同的支持, 比如之
 
 注: 本书主要参照`Intel开发者手册` 2012年8月版, order number为: `325462-044US`.
 
-# 检测是否支持VMX
+# 检测是否支持VMX架构
 
-使用 `CPUID.01H:ECX.VMX[5]`位来进行检测(详细见2.2.3)
+VMX 架构是否支持, 使用 `CPUID.01H:ECX.VMX[5]`位来进行检测(详细见2.2.3)
 
 # 通过MSR组检查VMX能力
 
@@ -21,3 +21,18 @@ VMX 的这些能力的检测提供在几组共 **14** 个 **MSR**(Model Specific
 
 ![2020-02-24-22-19-23.png](./images/2020-02-24-22-19-23.png)
 
+......
+
+# 例子 2-1
+
+# 基本信息检测
+
+`IA32_VMX_BASIC`寄存器用来检测 VMX 的基本能力信息, 如图 2-6 所示.
+
+![2020-02-24-22-27-54.png](./images/2020-02-24-22-27-54.png)
+
+... ...
+
+bit 55 位为 1 时, 表示支持 4 个 TRUE 寄存器, 这 4 个 TRUE 寄存器将影响最终的 VMCS 中的某些控制位, 
+
+bit 55 的值决定由谁来控制这些 VMCS 字段固定位的设置. 当 bit 55 为 0 时, 这些 VMCS 字段的
