--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
@@ -33,6 +33,26 @@ VMX 的这些能力的检测提供在几组共 **14** 个 **MSR**(Model Specific
 
 ... ...
 
-bit 55 位为 1 时, 表示支持 4 个 TRUE 寄存器, 这 4 个 TRUE 寄存器将影响最终的 VMCS 中的某些控制位, 
+bit 55 位为 1 时, 表示支持 4 个 TRUE 寄存器, 这 4 个 TRUE 寄存器将影响最终的 VMCS 中的某些控制位, 如表 2-2 .
+
+![2020-02-24-22-35-02.png](./images/2020-02-24-22-35-02.png)
 
 bit 55 的值决定由谁来控制这些 VMCS 字段固定位的设置. 当 bit 55 为 0 时, 这些 VMCS 字段的
+
+# 允许为 0 以及允许为 1 位
+
+
+
+## 决定 VMX 支持的功能
+
+
+
+## 控制字段设置算法
+
+
+
+# VM-execution 控制字段
+
+
+
+#
