--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/5. VMX能力的检测.md
@@ -1,4 +1,6 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
 # 功能检测的必要性
 
 VMX架构中的很多功能在不同处理器架构有不同的支持, 比如之前提的 `VMX-preemption timer` 功能. 
@@ -55,4 +57,44 @@ bit 55 的值决定由谁来控制这些 VMCS 字段固定位的设置. 当 bit 
 
 
 
-#
+## Pin-based VM-execution control 字段
+
+
+
+## primary processor-based VM-execution control 字段
+
+
+
+## secondary processor-based VM-execution control 字段
+
+
+
+# VM-exit control 字段
+
+
+
+# VM-entry control 字段
+
+
+
+# VM-function control 字段
+
+
+
+# CR0 与 CR4 的固定位
+
+
+
+## CR0 与 CR4 寄存器设置算法
+
+
+
+# VMX 杂项信息
+
+
+
+# VMCS 区域字段 index 值
+
+
+
+# VPID 与 EPT 能力
