--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -6,8 +6,8 @@
 - [基本原理](#基本原理)
 - [EPT机制概述](#ept机制概述)
   - [guest分页机制与EPT](#guest分页机制与ept)
-    - [1.1.1 guest的分页模式](#111-guest的分页模式)
-    - [1.1.2 引发GPA转换HPA](#112-引发gpa转换hpa)
+    - [guest的分页模式](#guest的分页模式)
+    - [引发GPA转换HPA](#引发gpa转换hpa)
     - [1.1.3 guest分页机制下GPA的转换](#113-guest分页机制下gpa的转换)
 - [2 EPT页表结构](#2-ept页表结构)
 
@@ -40,12 +40,14 @@ VMM在设置前应查询处理器**是否支持EPT机制**, 通过检查`seconda
 
 **实模式**下不使用分页机制, guest访问使用的linear address(**线性地址**)就是**物理地址**(也是`guest-physical address`).
 
-当CR0.PG=1时guest启用分页, guest\-linear address(guest线性地址)通过页表结构转换成物理地址. 当"enable EPT"位为1, **guest**内的**线性地址**转换成**guest\-physical address**. 同时, 产生两个页表结构的概念.
+当`CR0.PG=1`时**guest**启用**分页**, `guest-linear address`(guest线性地址)通过页表结构转换成**物理地址**. 
 
-- guest paging structure(guest页表结构): 这是guest内将线性地址转换成GPA(guest\-physical address)的页表结构. 即x86/x64下分页机制使用的页表结构.
-- EPT paging structure(EPT页表结构): 负责将**GPA转换成HPA**所使用的页表结构.
+当"`enable EPT`"位为1, **guest**内的**线性地址**转换成`guest-physical address`. 同时, 产生两个页表结构的概念.
 
-注: 当"**enable EPT"位为1**, **guest**内所有"**物理地址**"都视为"**guest\-physical address**". 例如, 由CR3寄存器指向的guest paging structure地址属于**GPA**(在"**enable EPT"位为0**, **CR3的地址是物理地址**), 并且guest paging structure页表项内所引用的地址都属于GPA.
+- `guest paging structure`(**guest页表结构**): 这是guest内将线性地址**GVA**转换成**GPA**(`guest-physical address`)的页表结构. 即x86/x64下分页机制使用的页表结构.
+- `EPT paging structure`(**EPT页表结构**): 负责将**GPA转换成HPA**所使用的页表结构.
+
+注: 当"`enable EPT`"位为1, **guest**内所有"**物理地址**"都视为"`guest-physical address`". 例如, 由**CR3寄存器**指向的guest paging structure地址属于**GPA**(在"**enable EPT"位为0**, **CR3的地址是物理地址**), 并且guest paging structure页表项内所引用的地址都属于GPA.
 
 而**EPTP**所指向的EPT paging structure**地址是HPA(！！！**), 并且EPT paging structure**页表项内**所引用的**地址都属于HPA(！！！**).
 
@@ -53,11 +55,21 @@ VMM在设置前应查询处理器**是否支持EPT机制**, 通过检查`seconda
 
 ![config](./images/1.png)
 
-### 1.1.1 guest的分页模式
+### guest的分页模式
 
-见其他内容
+可参照其他.
 
-### 1.1.2 引发GPA转换HPA
+x64 体系上有三种分页模式(`CR0.PG=1`)
+
+(1) 
+
+(2)
+
+(3)
+
+guest的线性地址根据上面的分页模式转换成 guest physical address. 当guest使用PAE分页模式, 并且启用了EPT机制时, 在 VM-entry 时会加载 4 个 PDPTE字段(参见4.7.7与4.5.11).
+
+### 引发GPA转换HPA
 
 三个途径引发guest\-physical address转换成host\-physical address
 
