--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第6章 内存虚拟化/1. EPT(扩展页表)机制.md
@@ -8,8 +8,10 @@
   - [guest分页机制与EPT](#guest分页机制与ept)
     - [guest的分页模式](#guest的分页模式)
     - [引发GPA转换HPA](#引发gpa转换hpa)
-    - [1.1.3 guest分页机制下GPA的转换](#113-guest分页机制下gpa的转换)
-- [2 EPT页表结构](#2-ept页表结构)
+    - [guest分页机制下GPA到HGA的转换](#guest分页机制下gpa到hga的转换)
+- [EPT页表结构](#ept页表结构)
+- [guest physical address](#guest-physical-address)
+- [EPTP](#eptp)
 
 <!-- /code_chunk_output -->
 
@@ -71,29 +73,29 @@ guest的线性地址根据上面的分页模式转换成 guest physical address.
 
 ### 引发GPA转换HPA
 
-三个途径引发guest\-physical address转换成host\-physical address
+三个途径引发`guest-physical address`转换成`host-physical address`
 
-(1) guest进行内存访问, 包括读写访问及执行访问
+(1) guest进行**内存访问**, 包括**读写访问**及**执行访问**
 
-(2) guest使用PAE分页模式加载PAPTE, 包括:
+(2) guest使用**PAE分页模式**加载**PDPTE**, 包括:
 
 - 
 
-(3) 在guest\-linear address转换为guest\-physical address过程中, 处理器访问guest paging structure表项内的地址, 它们属于GPA(例如PDPTE内的地址值)
+(3) 在`guest-linear address`转换为`guest-physical address`过程中, 处理器访问`guest paging structure`**表项**内的地址, 它们属于GPA(例如PDPTE内的地址值)
 
-总之, GPA可能是从guest\-linear address转换而来, 或直接访问GPA.
+总之, GPA可能是从`guest-linear address`转换而来, 或直接访问GPA(即并不是从guest linear address转换而来)
 
-### 1.1.3 guest分页机制下GPA的转换
+### guest分页机制下GPA到HGA的转换
 
-分页机制下, 完成整个guest访问内存操作会引发一系列GPA转换HPA过程.
+**分页机制**下, 完成整个**guest访问内存**操作会引发一系列**GPA转换HPA**过程.
 
-假设guest使用IA\-32e分页模式(IA32\_EFER.LMA = 1, CR4.PAE=1, CR0.PG=1), 并且使用4KB页面. 下图描述了GPA转成HPA过程.
+假设guest使用 `IA-32e`分页模式(`IA32_EFER.LMA = 1`, `CR4.PAE=1`, `CR0.PG=1`), 并且使用4KB页面. 下图描述了GPA转成HPA过程.
 
 ![config](./images/2.png)
 
 完成这个内存访问操作一共需要5次GPA到HPA的转换(N=MAXPHYADDR)
 
-(1) CR3寄存器的bits N\-1:12提供PML4T基址. 定位PML4T时需对PML4T基址进行GPA转换(图中第1步). 成功转换HPA后得到**PML4T的物理地址(其实就是地址拼凑！！！**), 再由PML4E index查找PML4E(图中A点)
+(1) **CR3寄存器**的`bits N-1:12`提供PML4T基址. 定位PML4T时需对PML4T基址进行GPA转换(图中第1步). 成功转换HPA后得到**PML4T的物理地址(其实就是地址拼凑！！！**), 再由PML4E index查找PML4E(图中A点)
 
 (2) PML4E的bits N\-1:12提供PDPT基址. 在定位PDPT时需要对PDPT基址进行GPA转换(第二步). 成功转换HPA后得到PDPT的物理地址, 再由PDPTE index查找PDPTE(B点)
 
@@ -107,18 +109,26 @@ guest的线性地址根据上面的分页模式转换成 guest physical address.
 
 也可能由于**guest paging structure**而引发**guest产生\#PF异常**, 从而使**guest处理\#PF异常处理程序**或由于\#PF异常**直接或间接导致VM\-exit**.
 
-# 2 EPT页表结构
+# EPT页表结构
 
 EPT paging structure(EPT页表结构)与guest paging structure(guest页表结构)的实现类似. VMX架构实现最高4级EPT页表结构, 分别是:
 
-(1) EPT PML4T(EPT Page Map Level\-4 Table), 表项是EPT PML4E.
+(1) EPT PML4T(`EPT Page Map Level-4 Table`), 表项是EPT PML4E.
 
-(2) EPT PDPT(EPT Page Directory Pointer Table), 表项是EPT PDPTE.
+(2) EPT PDPT(`EPT Page Directory Pointer Table`), 表项是EPT PDPTE.
 
-(3) EPT PDT(EPT Page Directory Table), 表项是EPT PDE.
+(3) EPT PDT(`EPT Page Directory Table`), 表项是EPT PDE.
 
-(4) EPT PT(EPT Page Table), 表项是EPT PTE.
+(4) EPT PT(`EPT Page Table`), 表项是EPT PTE.
 
 软件可以查询IA32\_VMX\_EPT\_VPID\_CAP寄存器的bit 6来确定是否支持4级页表结构, 为1时EPT支持,. 每个EPT页表大小是4KB, 每个EPT页表项为64位宽.
 
 EPT支持三种页面
+
+# guest physical address
+
+
+
+# EPTP
+
+EPT 页表结构顶层的 PML4T 物理地址由 EPTP(Extended Page Table Pointer, 扩展页表指针)
